completed, console.logs commented out

--- a/client/src/views/CreatorView.module.css
+++ b/client/src/views/CreatorView.module.css
@@ -19,6 +19,8 @@ button {
     border-radius: 0.3rem;
     border: solid black;
     font-size: 16pt;
+    cursor: pointer;
+    
 }
 
 .creatorLink {
